# pymodaq_plugins_simu_scan

./: README.rst  plugin_info.toml  pyproject.toml
src/pymodaq_plugins_simu_scan/daq_move_plugins/: daq_move_simu_scan.py
src/pymodaq_plugins_simu_scan/daq_viewer_plugins/plugins_2D/: daq_2Dviewer_simu_scan.py
src/pymodaq_plugins_simu_scan/hardware/: camera.py  simu_scan.py
